Global Fix (base-select,advantages.css,form.css, header.css, hero.css, index.html, main.css) ellipsis for select__head, list z-index, remade select list style, add main__container,global remade padding containers,

--- a/assets/styles/blocks/advantages.css
+++ b/assets/styles/blocks/advantages.css
@@ -6,7 +6,7 @@
 @media (min-width: 400px) {
     .advantages {
         position: relative;
-        padding: 50px 0;
+        padding: 20px 0;
         overflow: hidden;
         box-shadow: unset;
     }
@@ -15,7 +15,7 @@
 @media (min-width: 576px) {
     .advantages {
         position: relative;
-        padding: 60px 0;
+        padding: 30px 0;
     }
 }
 
@@ -32,23 +32,27 @@
         padding: 0;
         width: 640px;
         height: 561px;
-        top: 60px;
-        right: 100px;
+        top: -26px;
+        right: 0;
         background-color: transparent;
         overflow: unset;
         box-shadow: unset;
-        z-index: -1;
+        z-index: 1;
     }
 }
 
-
+@media (min-width: 1200px) {
+    .advantages {
+        right: 106px;
+    }
+}
 
 @media (min-width: 1440px) {
     .advantages {
         width: 974px;
         height: 810px;
-        right: 100px;
-        top: 5px;
+        right: 0;
+        top: -100px;
     }
 }
 
@@ -113,16 +117,16 @@
         object-fit: cover;
         width: auto;
         height: auto;
-        top: -6px;
-        left: 2px;
+        top: -60px;
+        left: 7px;
         max-width: 566px;
     }
 }
 
 @media (min-width: 576px) {
     .advantages__GirlImage {
-        top: -6px;
-        left: 100px;
+        top: -46px;
+        left: 120px;
     }
 }
 
