--- a/assets/styles/blocks/form.css
+++ b/assets/styles/blocks/form.css
@@ -5,14 +5,17 @@
 
 @media (min-width: 700px) {
     .form {
-        padding: 30px 0;
+        padding: 15px 0;
     }
 }
 
 @media (min-width: 922px) {
     .form {
+        position: relative;
+        z-index: 2;
         padding: 15px 0;
         min-width: 575px;
+        width: fit-content;
     }
 }
 
