--- a/assets/styles/blocks/hero.css
+++ b/assets/styles/blocks/hero.css
@@ -4,7 +4,7 @@
 
 @media (min-width: 700px) {
     .hero {
-        padding: 30px 0;
+        padding: 20px 0;
     }
 }
 
